<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/sv_status"
        style="@style/statusConsoleScrollView">

        <TextView
            android:id="@+id/tv_status"
            style="@style/statusConsoleTextView" />
    </ScrollView>

    <ScrollView
        android:id="@+id/sv_button_container"
        android:layout_below="@id/sv_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/abc_action_bar_default_padding_material">

            <Button
                android:id="@+id/button_login_to_mega"
                android:text="@string/button_login_to_mega_text"
                style="@style/PrimeStationOneControlButton" />

            <Button
                android:id="@+id/button_intelligent_cloud_save_sync"
                android:text="@string/button_intelligent_cloud_save_sync_text"
                style="@style/PrimeStationOneControlButton" />

            <Button
                android:id="@+id/button_force_backup_to_mega"
                android:text="@string/button_force_backup_to_mega_text"
                style="@style/PrimeStationOneControlButton" />

            <Button
                android:id="@+id/button_force_restore_from_mega"
                android:text="@string/button_force_restore_from_mega_text"
                style="@style/PrimeStationOneControlButton" />

            <Button
                android:id="@+id/button_logout_of_mega"
                android:text="@string/button_logout_of_mega_text"
                style="@style/PrimeStationOneControlButton" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>