<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:background="@color/grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="56dp"
            android:paddingStart="56dp">

            <ImageView
                android:id="@+id/view_discovery_empty_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/empty_state_logo_content_description"
                android:src="@drawable/ic_launcher"/>

            <TextView
                android:id="@+id/view_discovery_empty_title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="22sp"
                android:gravity="center"
                android:text="@string/empty_discovery_no_primestations_discovered_text"/>

            <TextView
                android:id="@+id/view_discovery_empty_body_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8sp"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:text="@string/empty_discovery_description"/>

            <Button
                android:id="@+id/view_discovery_empty_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="17sp"
                android:text="@string/empty_discovery_configure_button"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>

